--- a/server/pom.xml
+++ b/server/pom.xml
@@ -22,7 +22,7 @@
       <version>1.3.0</version>
     </dependency>
   </dependencies>
-  
+
   <build>
     <plugins>
         <plugin>
@@ -34,6 +34,26 @@
                 <target>1.7</target>
             </configuration>
         </plugin>
+        <plugin>  
+            <groupId>org.codehaus.mojo</groupId>  
+            <artifactId>exec-maven-plugin</artifactId>  
+            <version>1.6.0</version>  
+            <executions>  
+                <execution>  
+                    <phase>package</phase>
+                <goals>  
+                    <goal>java</goal>  
+                </goals>  
+                </execution>  
+            </executions>  
+            <configuration>  
+                <mainClass>webconnection.App</mainClass>  
+                <!-- <arguments>
+                    <argument>configFile</argument>
+                    <argument>properties</argument>
+                </arguments> -->
+            </configuration>  
+        </plugin>  
     </plugins>
     </build>
 </project>
