added outer pom with server module (so travis can test)

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ node_js:
 
 install:
   - npm install --prefix client
+  - mvn install
 
 script:
   - npm test --prefix client || travis_terminate 1
