--- a/server/pom.xml
+++ b/server/pom.xml
@@ -26,6 +26,11 @@
          <artifactId>gson</artifactId>
          <version>2.8.5</version>
      </dependency>
+    <dependency>
+        <groupId>org.mariadb.jdbc</groupId>
+        <artifactId>mariadb-java-client</artifactId>
+        <version>2.1.2</version>
+    </dependency>
   </dependencies>
 
   <build>
