--- a/server/pom.xml
+++ b/server/pom.xml
@@ -31,6 +31,11 @@
         <artifactId>mariadb-java-client</artifactId>
         <version>2.1.2</version>
     </dependency>
+    <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.2</version>
+    </dependency>
   </dependencies>
 
   <build>
